src/test/deca/context/valid/class_decl/field_public_bool.deca
// Description:
//    Déclaration d'une classe avec un attribut float
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class test {
	boolean a;
}

{

}
