src/test/deca/context/invalid/class/class_decl/boolean.deca
// Description:
//    Déclaration d'une classe boolean
//
// Resultats:
//    Double définition of boolean
// 
// Historique:
//    cree le 01/01/2016

class boolean {

}

{

}
